[package]
name = "rpi-mqtt-gpio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.4"
rumqttc = "0.20"
bytes = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Cross compiling to armv7 via Docker and Cross
#
# colima start --mount $HOME:w
# cargo install cross --git https://github.com/cross-rs/cross
# cross build --target armv7-unknown-linux-musleabihf
